--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* Main Blue Button styles */
+.button-main{
+    @apply bg-[#00B6FF] py-2 px-8 text-[10px] text-white border-b border-[#00B6FF];
+}
+
+
+/* Sub Blue Button styles */
+.button-sub{
+    @apply bg-transparent border-b border-[#00B6FF] py-2 px-5 text-[#00B6FF];
+}
+
+
